--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "limits": "cpp",
+        "ostream": "cpp",
+        "cmath": "cpp"
     }
 }
